@@ -20,6 +20,9 @@
 	so that intelligent browsers like Mozilla can show
 	next/prev/contents/top buttons.
 
+	<LI>HTMLDOC now supports the BORDERCOLOR attribute for
+	tables, a MSIE extension.
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<LI>The command-line now allows --fontsize values from 4
@@ -39,6 +42,13 @@
 	all situations.
 
 	<LI>Fixed some more PNG transparency cases.
+
+	<LI>The PageBoundingBox comments in PostScript output
+	did not account for the back page when duplexing was
+	enabled.
+
+	<LI>HTMLDOC generated an incorrect image mask for some
+	images.
 
 </UL>
 
